<resources>

    <string name="label" />
    <string name="app_name">Examen</string>
    <string name="radiobutton_text">LinearLayout</string>
    <string name="examen_de_android">Examen de Android</string>
    <string name="datos_alumno">1. Datos del Alumno</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="email">Correo Electrónico</string>
    <string name="selecciona_respuesta">2. Selecciona la respuesta correcta</string>
    <string name="pregunta1">¿Qué componente se utiliza para crear diseños flexibles?</string>
    <string name="linearlayout">LinearLayout</string>
    <string name="constraintlayout">ConstraintLayout</string>
    <string name="framelayout">FrameLayout</string>
    <string name="selecciona_todas">3. Selecciona todas las que apliquen</string>
    <string name="pregunta2">¿Cuáles son los componentes de la arquitectura Android?</string>
    <string name="activity">Activity</string>
    <string name="viewmodel">ViewModel</string>
    <string name="javascript">JavaScript</string>
    <string name="repository">Repository</string>
    <string name="pregunta_desarrollo">4. Pregunta de desarrollo</string>
    <string name="caja_desarrollo">Explica qué es Dependency Injection</string>
    <string name="puntos">Pts</string>
    <string name="enviar">Envíar Examen</string>
    <string name="timer">10 : 00</string>
    <string name="one">+1</string>
    <string name="two">+2</string>
    <string name="three">+3</string>
    <string name="equipo1">Equipo 1</string>
    <string name="equipo2">Equipo 2</string>
    <string name="first">1.º</string>
    <string name="score1">34</string>
    <string name="score2">18</string>
    <string name="faltas">Faltas</string>
    <string name="x">X</string>
    <string name="plus">+</string>
    <string name="compartir">COMPARTIR</string>
    <string name="editar">EDITAR</string>
    <string name="_0_x_0">0 x 0</string>
</resources>