<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:textColor="?attr/colorOnSurface">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalizq0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalizq1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.22" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalizq2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.28" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalmitad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticaldch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.72" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticaldch0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/superior0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/superior1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/superior2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/superior3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.29" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/inferior2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/inferior1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.71" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/inferior0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.97" />


    <TextView
        android:id="@+id/titulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/examen_de_android"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/verticaldch0"
        app:layout_constraintStart_toStartOf="@id/verticalizq0"
        app:layout_constraintTop_toTopOf="@id/superior0" />


    <TextView
        android:id="@+id/datosAlumno"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/datos_alumno"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/titulo"
        app:layout_constraintBottom_toBottomOf="@id/cajaNombre"
        app:layout_constraintStart_toStartOf="@id/verticalizq0"
        app:layout_constraintTop_toTopOf="@id/cajaNombre"
        app:layout_constraintWidth_percent="0.4" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cajaNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_completo"
        app:layout_constraintEnd_toEndOf="@id/verticaldch0"
        app:layout_constraintStart_toEndOf="@id/datosAlumno"
        app:layout_constraintTop_toBottomOf="@+id/titulo"
        app:layout_constraintBottom_toTopOf="@+id/superior1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cajaEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="@id/verticaldch0"
        app:layout_constraintStart_toStartOf="@id/verticalizq0"
        app:layout_constraintTop_toBottomOf="@id/superior2"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cajaPts1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/puntos"
        style="?attr/textInputFilledStyle"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintStart_toStartOf="@+id/verticalizq0"
        app:layout_constraintTop_toBottomOf="@id/cajaEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPts1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="11sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/seleccionaRespuesta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/selecciona_respuesta"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@id/cajaPts1"
        app:layout_constraintEnd_toEndOf="@id/verticaldch0"
        app:layout_constraintStart_toEndOf="@id/verticalizq1"
        app:layout_constraintTop_toBottomOf="@id/superior3" />



    <TextView
        android:id="@+id/pregunta1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pregunta1"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@id/radioRespuestas"
        app:layout_constraintEnd_toStartOf="@id/radioRespuestas"
        app:layout_constraintStart_toStartOf="@id/verticalizq0"
        app:layout_constraintTop_toTopOf="@id/radioRespuestas"
        app:layout_constraintWidth_percent="0.45" />

    <RadioGroup
        android:id="@+id/radioRespuestas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/enabled_selected"
        app:layout_constraintEnd_toEndOf="@id/verticaldch0"
        app:layout_constraintTop_toBottomOf="@id/seleccionaRespuesta"
        app:layout_constraintWidth_percent="0.45">

        <RadioButton
            android:id="@+id/enabled_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:text="@string/linearlayout" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:enabled="true"
            android:text="@string/constraintlayout" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:enabled="true"
            android:text="@string/framelayout" />
    </RadioGroup>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cajaPts2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/puntos"
        style="?attr/textInputFilledStyle"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintStart_toEndOf="@id/verticalizq0"
        app:layout_constraintTop_toBottomOf="@id/inferior2"
        app:layout_constraintBottom_toTopOf="@id/pregunta2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPts2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="11sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/seleccionaTodas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/selecciona_todas"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@id/cajaPts2"
        app:layout_constraintEnd_toEndOf="@id/verticaldch0"
        app:layout_constraintStart_toEndOf="@id/verticalizq1"
        app:layout_constraintTop_toTopOf="@id/cajaPts2" />

    <TextView
        android:id="@+id/pregunta2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pregunta2"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@id/verticaldch0"
        app:layout_constraintStart_toStartOf="@id/verticalizq0"
        app:layout_constraintTop_toBottomOf="@id/cajaPts2" />


        <CheckBox
            android:id="@+id/cb1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/activity"
            android:textSize="11sp"
            app:layout_constraintStart_toEndOf="@+id/verticalizq0"
            app:layout_constraintTop_toBottomOf="@id/pregunta2"/>

        <CheckBox
            android:id="@+id/cb2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/viewmodel"
            android:textSize="11sp"
            app:layout_constraintStart_toEndOf="@+id/cb1"
            app:layout_constraintTop_toBottomOf="@id/pregunta2"/>

        <CheckBox
            android:id="@+id/cb3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/javascript"
            android:textSize="11sp"
            app:layout_constraintStart_toEndOf="@id/cb2"
            app:layout_constraintTop_toBottomOf="@id/pregunta2"/>

        <CheckBox
            android:id="@+id/cb4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/repository"
            android:textSize="11sp"
            app:layout_constraintTop_toBottomOf="@+id/pregunta2"
            app:layout_constraintStart_toEndOf="@id/cb3"/>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cajaPts3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/puntos"
        app:boxBackgroundMode="none"
        app:layout_constraintEnd_toStartOf="@id/verticalizq1"
        app:layout_constraintStart_toStartOf="@id/verticalizq0"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_container">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPts3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="11sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/preguntaDesarrollo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pregunta_desarrollo"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/cb1"
        app:layout_constraintStart_toStartOf="@id/verticalmitad"
        app:layout_constraintEnd_toEndOf="@id/verticaldch0"
        app:layout_constraintStart_toEndOf="@id/verticalizq1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cajaDesarrollo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/caja_desarrollo"
        app:layout_constraintEnd_toEndOf="@id/verticaldch0"
        app:layout_constraintStart_toStartOf="@id/verticalizq0"
        app:layout_constraintTop_toBottomOf="@id/inferior1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editRespuesta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="3" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enviar"
        android:checkable="true"
        app:layout_constraintTop_toBottomOf="@+id/cajaDesarrollo"
        app:layout_constraintBottom_toTopOf="@id/inferior0"
        app:layout_constraintStart_toEndOf="@id/verticalizq0"
        app:layout_constraintEnd_toEndOf="@id/verticaldch0"/>

</androidx.constraintlayout.widget.ConstraintLayout>